# gedic

./: Makefile.am  Makefile.in  README  aclocal.m4  config.h.in  configure  configure.ac
engdic/: ui_main.xml
engdic/CVS/: Entries  Repository  Root
pixmaps/CVS/: Entries  Repository
src/: Makefile.am  Makefile.in  eggtrayicon.c  gengdic.c  gengdic.h
